🔧 biome.jsonにルール追加

--- a/biome.json
+++ b/biome.json
@@ -43,6 +43,18 @@
       }
     }
   },
+  "overrides": [
+    {
+      "includes": ["app/layout.tsx"],
+      "linter": {
+        "rules": {
+          "security": {
+            "noDangerouslySetInnerHtml": "off"
+          }
+        }
+      }
+    }
+  ],
   "javascript": {
     "formatter": {
       "quoteStyle": "double",
